--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,9 @@
 ﻿<!DOCTYPE html>
+<meta charset="UTF-8">
 <html>
 <head>
     <base href="/" />
-    <title>Angular 7 - JWT Authentication Tutorial & Example</title>
+    <title>mp3-studio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- bootstrap css -->
